[package]
name = "quaybom"
version = "0.1.0"
edition = "2024"

[dependencies]
oci-client = "0.14"
tracing = { version = "0.1", features = ['log'] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
docker_credential = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread", "io-std"] }